# appjs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  package.json  test.js  test_simple.js
.github/workflows/: publish-packages.yml
docs/: ARCHITECTURE_FLOW.md  architecture.md
examples/: README.md  counter.js  counter.ts  image_viewer.ts  package.json  solid_counter.ts  solid_counter.tsx  test_ui.js  tsconfig.json
examples/js/: counter.js  styled_counter.js  test_simple.js  test_ui.js
examples/scripts/: run-example.ts
examples/solid/: solid_calculator.tsx  solid_counter.tsx  solid_hover.tsx  solid_image_viewer.tsx  solid_web_node_demo.tsx
src/: main.rs  socket.rs
src/ipc/: channels.rs  color.rs  commands.rs  events.rs  mod.rs  msgpack.rs  server.rs
src/js_thread/: appjs.js  console_ops.rs  event_serializer.rs  ipc_ops.rs  mod.rs  module_loader.rs  style_parser.rs  telemetry_stub.rs  web_bootstrap.rs
src/ui/: creation.rs  driver.rs  global_state.rs  handler.rs  layout.rs  mod.rs  styles.rs  widget_manager.rs
src/ui/widgets/: button.rs  checkbox.rs  custom.rs  flex.rs  grid.rs  hoverable.rs  hoverable_create.rs  image.rs  label.rs  portal.rs  progress_bar.rs  prose.rs  sized_box.rs  slider.rs  spinner.rs  svg.rs  svg_widget_impl.rs  text_area.rs  text_input.rs  utils.rs  video.rs  video_widget_impl.rs  zstack.rs
src/ui_thread/: creation.rs  driver.rs  handler.rs  layout.rs  mod.rs  styles.rs  widget_manager.rs
src/ui_thread/widgets/: button.rs  checkbox.rs  custom.rs  flex.rs  grid.rs  icon_button.rs  image.rs  label.rs  mod.rs  portal.rs  progress_bar.rs  prose.rs  sized_box.rs  slider.rs  spinner.rs  svg.rs  text_area.rs  text_input.rs  utils.rs  zstack.rs
