[package]
name = "appjs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Deno runtime for JavaScript execution
deno_runtime = "0.239.0"

# sys_traits for Deno runtime (provides RealSys)
sys_traits = "0.1"

# Masonry UI framework
masonry = "0.4.0"
masonry_winit = "0.4.0"
winit = "0.30.12"

# Async runtime (required by deno_runtime internally)
tokio = { version = "1", features = ["full"] }
